adjsuted height of piucture in home page

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -9,7 +9,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">{{ listing.title }}</h5>
-                    <img src="{{ listing.image_url }}" class="card-img-top" alt="{{ listing.title }}" style="max-width: 400px;">
+                    <img src="{{ listing.image_url }}" class="card-img-top" alt="{{ listing.title }}" style="max-height: 400px;">
                     <p class="card-text">{{ listing.description }}</p>
                     <p class="card-text">Category: {{ listing.category }}</p>
                     <p class="card-text">Starting Bid: ${{ listing.starting_bid }}</p>
