--- a/auctions/templates/auctions/listing_view.html
+++ b/auctions/templates/auctions/listing_view.html
@@ -6,7 +6,7 @@
     <h2>{{listing.title}}</h2>
     <p>By: {{listing.user}}</p>
 
-    <img src="{{listing.image_url}}" class="card-img-top" alt="{{listing.title}}" style="max-width: 400px;">
+    <img src="{{listing.image_url}}" class="card-img-top" alt="{{listing.title}}" style="max-height: 400px;">
     <p>{{listing.description}}</p>
 </div>
 
