--- a/auctions/templates/auctions/listing_edit.html
+++ b/auctions/templates/auctions/listing_edit.html
@@ -1,107 +1,40 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-<div>
-
-    <h2>{{listing.title}}</h2>
-
-    <img src="{{listing.image_url}}" class="card-img-top" alt="{{listing.title}}" style="max-width: 400px;">
-    <p>{{listing.description}}</p>
-</div>
-{{user.username}}
-{{listing.user}}
-
-{% if user.username == listing.user.username %}
-    <div>
-        <a href="{% url 'listing_edit' listing.id %}" class="btn btn-primary">Edit Listing</a>
-    </div>
-{% endif %}
-
-{% if listing.active == False %}
-    <div>
-        <p>This listing is closed.</p>
-    </div>
-{% else %}
-    <div>
-        <p>Category: {{listing.category}}</p>
-        <p>Starting Bid: ${{listing.starting_bid}}</p>
-    </div>
-{% endif %}
-
-{% if user.is_authenticated and user.username == listing.user.username %}
-    <div>
-        <a href="{% url 'listing_close' listing.id %}" class="btn btn-primary">Close Listing</a>
-    </div>
-{% endif %}
-
-<div>
-
-{% if user.is_authenticated and user.username == listing.user.username %}
-
-        <p>This listing is yours.</p>
-{% else %}
-    
-    {% if watch %}
-            <a href="{% url 'watchlist_toggle' listing.id %}" class="btn btn-primary">Add to Watchlist</a>
-    {% else %}
-            <a href="{% url 'watchlist_toggle' listing.id %}" class="btn btn-primary">Remove from Watchlist</a>
-    {% endif %}
-    
-{% endif %}
-
-</div>
-
-<br>
-
-
-{% if user.is_authenticated %}
-    <form action="{% url 'bid_create' listing.id %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" type="number" name="bid" placeholder="Place a bid" min="1">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Place Bid">
-    </form>
-    <br>
-    {% if message %}
-        <div>
-            <p>{{message}}</p>
-        </div>
-    {% endif %}
-    {% if current_bid %}
-        <div>
-            <p>Current bid: ${{current_bid}}</p>
-        </div>
-    {% else %}
-        <div>
-            <p>No bids yet, starting bid {{listing.starting_bid}}</p>
-        </div>
-    {% endif %}
-    <br>
-    <div>
-        <h3>Comments</h3>
-        <form action="{% url 'comment_create' listing.id %}" method="post">
+    {% if user.username == listing.user.username %}
+        
+        <form action="{% url 'listing_edit' listing.id %}" method="POST">
             {% csrf_token %}
+            <h2>Edit Listing</h2>
             <div class="form-group">
-                <textarea class="form-control" name="comment" placeholder="Add a comment"></textarea>
+                <input class="form-control" autofocus type="text" name="title" value="{{listing.title}}">
             </div>
-            <input class="btn btn-primary" type="submit" value="Add Comment">
-        </form>
-        <br>
-        {% for comment in comments %}
-            <div>
-                <p>{{comment.comment}}</p>
-                <p>By: {{comment.user}}</p>
-                <p>On: {{comment.created}}</p>
-            </div>
-        {% endfor %}
-    </div>
-{% else %}
-    <div>
-        <p>You must be logged in to place a bid. <a href="{% url 'user_login' %}">Log In here.</a></p>
-     <br>
-    Don't have an account? <a href="{% url 'user_register' %}">Register here.</a><br>
-    </div>
-{% endif %}
+            <div class="form-group">
+                <textarea class="form-control" name="description">{{ listing.description }}</textarea>
 
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="url" name="image_url" value="{{listing.image_url}}">
+            </div>
+            <div class="form-group">
+                <select class="form-control" name="category" value="{{listing.category}}">
+                    <option value="Fashion">Fashion</option>
+                    <option value="Toys">Toys</option>
+                    <option value="Electronics">Electronics</option>
+                    <option value="Home">Home</option>
+                    <option value="Other">Other</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="number" name="starting_bid" placeholder="Starting Bid" value="{{listing.starting_bid}}">
+            </div>
+            <input class="btn btn-primary" type="submit" value="Save Listing">
+        </form>
+        
+    {% else %}
+        <h1>You shoulnd't be here</h1>
+        <h2>
+            <a href="/">Back to Home Page</a>
+        </h2>
+    {% endif %}
 {% endblock %}
